# liankebao

./: .dockerignore  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  2026-06-05-B2B交易的核心难题-如何建立企业间信任网络.md  AI_MODULE_ARCHITECTURE.md  ARCHITECTURE.md  ASSET_ANALYSIS_REPORT.md  CEO_执行方案_2026-05-12.md  CHANGELOG.md  DEVELOPMENT_BEST_PRACTICE.md  Dockerfile  Dockerfile.ssr  GAP修复计划_前端审计.md  GEO知识库提交指南.md  GITHUB_SECRETS_SOP.md  GO_TO_MARKET.md  KFD架构标定报告.md  KFD装配文档.md  L5_API_CONTRACT.md  MEMORY.md  MICROSERVICE_ARCHIVE.md  Makefile  P0_FIX_DELIVERY_REPORT.md  PRICING.md  PRIVACY_POLICY.md  README-小程序.md  README.md  SECURITY.md  SOUL.md  TECH_DEBT_CLEANUP.md  WECHAT_PAYMENT_PLAN.md  WECHAT_PAY_SETUP_CHECKLIST.md  _final_clean.py  alembic.ini  check_wechat_config.py  compliance_report.md  debug_gateway.py  (+47 more)
backend/: .coveragerc  .env.example  .env.pg  .env.production  MIGRATION.md  admin_config.py  alembic.ini  alembic_brochure.ini  app.py  auto_migrate.bat  auto_migrate.sh  celery_app.py  data_migration.py  deploy_phase2.sh  design_review_engine.py  digital_brochure_api.py  fix_i18n.py  fix_init_py.py  fix_log_2026-05-29.md  fix_migration_pwd.py  health_dashboard.py  innovation_cli.py  innovation_engine.py  invoice.py  llm_cost_controller.py  matching_engine.py  migrate.bat  migrate_to_pg.py  openapi_cache.json  pyproject.toml  pytest.ini  recharge.html  reconciliation.py  requirements.txt  seed_brochures.py  seed_data.py  seed_needs.py  seed_trust_network.py  start_chainke.py  tech_debt_config.yaml  (+5 more)
backend/alembic/: env.py
backend/alembic/versions/: 02c9e16c4b58_initial_schema.py  add_enterprise_knowledge_graph.py  add_tenant_models.py  c0398919c9e1_add_soft_delete_fields.py
backend/app/: __init__.py  auth.py  backfill_org_id.py  bi_routes.py  business_card_ai.py  cache.py  circuit_breaker.py  compliance_dashboard.html  data_flywheel.py  database.py  database_mysql.py  database_postgres.py  dependencies.py  enterprise_crawler.py  evaluation.py  feature_flags.json  feature_flags.py  feature_pipeline.py  flags_config.json  health.py  i18n.py  im_bot.py  index.html  lifespan.py  logging_config.py  main.py  manifest.json  matching_enhanced.py  matching_model.py  migrate_sqlite_to_pg.py  ml_models.py  models.py  notification_service.py  notifications.py  observability.py  optimistic_lock.py  posthog_config.py  posthog_events.py  posthog_middleware.py  rate_limiter.py  (+30 more)
backend/app/agents/: __init__.py  agent_runtime.py  architecture_agent.py  backend_agent.py  base_agent.py  data_agent.py  employee_profiles.py  (+9 more)
backend/config/: category_synonyms.json
backend/data/: chainke.db  workflow.db
backend/data_pipeline/: analyzer.py  collector.py  config.py  pipeline.py
backend/data_security/: __init__.py  data_security_loader.py  test_e2e_data_security.py  validate_contracts.py
backend/deploy/: Dockerfile  chainke-agents.service  deploy_to_server.sh  docker-compose.yml  rls_policies.sql  watchdog.service
backend/design_review/: card_design_evaluator.py  report_generator.py  ui_checker.py
backend/docs/: ADR-009.md  OPERATIONS.md  api_portal_migration_plan.md  chain_verify_plan.md  rls_policy_design.md
backend/features/: __init__.py  cross_border_pipeline.py  embedding_cache.py  embedding_service.py  feedback_service.py  knowledge_graph.py  matching_pipeline.py  mmr_diversity.py  retrieval_pipeline.py
backend/innovation_engine/: engine.py  opportunity_scanner.py  recommender.py  trend_analyzer.py
backend/migrations/: 005_password_reset.sql  006_rls_policies.py
backend/migrations_brochure/: env.py  script.py.mako
backend/ml/: __init__.py  online_learning.py  online_learning_test.py
backend/models/: MODEL_ARCHITECTURE.md  matching_model.pkl  matching_model_metadata.json  matching_scaler.pkl  training_data_augmented.npz  training_history.npz
backend/payment/: PAYMENT_INTEGRATION_GUIDE.md  __init__.py  config.py  http_delegate.py  sign.py
backend/recharge/: __init__.py  callback.py  models.py  routes.py
backend/scripts/: __init__.py  auto_translate.py  backup_db.ps1  backup_db.sh  batch_embed.py  check_pg_connection.py  deploy_production.ps1  deploy_production.sh  gap_checklist.py  geo_content_generator.py  geo_cron.py  health_check.py  health_check_docker.py  migrate_six_degrees.py  migrate_to_mysql.py  migrate_to_pg.py  migrate_to_postgres.py  monitor_setup.py  one_click_migrate.py  prerender_server.py  restart_all.sh  run_tech_debt_scan.sh  security_audit.py  seo_optimizer.py  start_agents.py  tech_debt_scanner.py  test_monitor.py  verify_tenant_isolation.py
backend/seo/: __init__.py  robots.txt  schema_org.html  schema_org.json  sitemap.xml
backend/static/: index.html  manifest.json  offline.html  合伙人FAQ.md  合伙人政策手册.md  种子用户招募文案.md
backend/tests/: TEST_COVERAGE_REPORT.md  __init__.py  conftest.py  conftest_brochure.py  curl_test.py  k6_test.js  run_all.sh  smoke_test_new_arch.py  test_activities.py  test_admin.py  test_agent_runtime.py  test_all_agents.py  test_api_integration.py  test_audit_service.py  test_auth.py  test_auth_routes.py  test_batch_embed.py  test_brochure_auth.py  test_brochure_crud.py  test_brochure_health.py  test_brochure_i18n.py  test_brochure_match.py  test_brochure_trust.py  test_brochures.py  test_business_card.py  test_champion_challenger.py  test_contacts.py  test_core_modules.py  test_crm_pipeline.py  test_crm_pipeline_full.py  test_data_enrichment.py  test_data_pipeline.py  test_data_security.py  test_data_security_anomaly.py  test_data_security_contract.py  test_data_security_gate3.py  test_data_security_gateway.py  test_data_security_loader.py  test_data_security_quarantine.py  test_data_security_remaining.py  (+80 more)
backend/trust_engine/: __init__.py  matching.py  scoring.py
backend/venv_new/: pyvenv.cfg
payment_sdk/: README.md  __init__.py  config.py  http_delegate.py  payment_provider.py  pyproject.toml  setup.py  sign.py
payment_sdk/providers/: __init__.py  alipay.py  wxpay_v2.py  wxpay_v3.py
payment_sdk/tests/: test_config.py  test_payment_provider.py  test_sign.py  test_wxpay_v2.py  test_wxpay_v3.py
(+1240 files in other folders)
