[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chainke"
version = "0.1.0"
description = "链客宝 — Premium Business Network and Entrepreneur Supply-Demand Matching Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "sqlalchemy==2.0.35",
    "pydantic==2.9.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.9",
    "httpx==0.27.0",
    "pymysql==1.1.1",
    "cryptography==43.0.0",
    "jieba==0.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pre-commit>=3.8",
]
pg = [
    "psycopg2-binary>=2.9.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/venv*/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 30

[tool.bandit]
exclude_dirs = ["tests", "venv", "venv_new", ".venv"]
skips = ["B101", "B311"]
